tests/diagnostics/pipeline/downstream_suppression/file_role_rules_error_blocks_resolution/expect.txt
# exit: 1
lib.test.coppice:3:8: error: public declarations are not allowed in .test.coppice files
  public function run() -> nil {
         ^
